# trakt-toggl-sync

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yaml
app/: sync.py
k8s/base/: configmap-template.yaml  cronjob.yaml  namespace.yaml  pvc.yaml  secret-template.yaml  trakt_tokens_secret-template.yaml
k8s/secrets/: .gitkeep
scripts/: setup-e2e.sh
src/: __init__.py  sync.py  toggl.py  trakt.py  utils.py
tests/: pytest.e2e.ini  test_e2e.py  test_sync.py
